--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/590214f475.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Paint Picture</title>
   </head>
   <body>
